# brave-account

./: README.md  email-sent.html  index.html  login-success.html  login.html  register.html
css/: styles.css
website/: .gitignore  Cargo.toml
website/src/: lib.rs  main.rs
website/src/handlers/: home_handler.rs  mod.rs
website/static/css/: bootstrap.css  bootstrap.rtl.css  index.css  styles.css
website/tailwind/: package-lock.json  package.json
website/templates/: email-sent.html  home.html  login-success.html  login.html  register.html
