[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1"
actix-web = "4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", default-features = false }
zeroize = "1.5"
opaque-ke = { git = "https://github.com/facebook/opaque-ke", branch = "main", features = ["ristretto255"] }
base64 = "0.13"
